add some utilities for pools